System for testing plugins, take 3. b=386676 r=smichaud sr=roc
UltraBlame original commit: e28cd33a0335e6b476491727118f6815386e4a6b

--- a/browser/base/content/test/Makefile.in
+++ b/browser/base/content/test/Makefile.in
@@ -501,6 +501,22 @@ unreliable
 :
 bug
 432425
+#
+browser_pluginnotification
+.
+js
+disabled
+because
+it
+leaks
+when
+it
+can
+actually
+load
+a
+plugin
+instance
 _BROWSER_FILES
 =
 browser_bug321000
@@ -584,10 +600,6 @@ js
 feed_tab
 .
 html
-\
-browser_pluginnotification
-.
-js
 \
 plugin_unknown
 .
