Bug 445710: Add-on update shows old version while downloading. r=robstrong
UltraBlame original commit: 4063402109f2330d5eb683e5d0d4da35319d225c

--- a/toolkit/mozapps/extensions/src/nsExtensionManager.js.in
+++ b/toolkit/mozapps/extensions/src/nsExtensionManager.js.in
@@ -41501,11 +41501,9 @@ id
 currItem
 .
 id
-ds
-.
-setItemProperties
-(
-id
+var
+props
+=
 {
 availableUpdateURL
 :
@@ -41520,6 +41518,62 @@ availableUpdateInfo
 :
 null
 }
+;
+var
+updateVersion
+=
+ds
+.
+getItemProperty
+(
+id
+"
+availableUpdateVersion
+"
+)
+;
+var
+updateURL
+=
+ds
+.
+getItemProperty
+(
+id
+"
+availableUpdateURL
+"
+)
+;
+if
+(
+updateVersion
+&
+&
+(
+updateURL
+=
+=
+currItem
+.
+xpiURL
+)
+)
+props
+.
+newVersion
+=
+EM_L
+(
+updateVersion
+)
+;
+ds
+.
+setItemProperties
+(
+id
+props
 )
 ;
 ds
