Bug 466486 - Don't use a subshell to recurse over DIRS when DIRS is empty (try #2) r=ted
UltraBlame original commit: d11ccfc1d7548609bb28830abc4a74ba8c5a4233

--- a/Makefile.in
+++ b/Makefile.in
@@ -404,79 +404,9 @@ config
 autoconf
 .
 mk
-include
-(
-topsrcdir
-)
-/
-config
-/
-config
-.
-mk
 default
-alldep
-all
 :
 :
-(
-RM
-)
--
-rf
-(
-DIST
-)
-/
-sdk
-(
-RM
-)
--
-rf
-(
-DIST
-)
-/
-include
-(
-RM
-)
--
-rf
-(
-DIST
-)
-/
-private
-(
-RM
-)
--
-rf
-(
-DIST
-)
-/
-public
-(
-RM
-)
--
-rf
-(
-DIST
-)
-/
-bin
-/
-components
-(
-RM
-)
--
-rf
-_tests
 TIERS
 +
 =
@@ -512,30 +442,6 @@ memory
 /
 jemalloc
 endif
-ifdef
-ENABLE_TESTS
-#
-Additional
-makefile
-targets
-to
-call
-automated
-test
-suites
-include
-(
-topsrcdir
-)
-/
-testing
-/
-testsuite
--
-targets
-.
-mk
-endif
 include
 (
 topsrcdir
@@ -566,6 +472,16 @@ test
 -
 harness
 endif
+include
+(
+topsrcdir
+)
+/
+config
+/
+config
+.
+mk
 GARBAGE_DIRS
 +
 =
@@ -655,6 +571,69 @@ topsrcdir
 mozconfig
 .
 out
+default
+alldep
+all
+:
+:
+(
+RM
+)
+-
+rf
+(
+DIST
+)
+/
+sdk
+(
+RM
+)
+-
+rf
+(
+DIST
+)
+/
+include
+(
+RM
+)
+-
+rf
+(
+DIST
+)
+/
+private
+(
+RM
+)
+-
+rf
+(
+DIST
+)
+/
+public
+(
+RM
+)
+-
+rf
+(
+DIST
+)
+/
+bin
+/
+components
+(
+RM
+)
+-
+rf
+_tests
 #
 Build
 pseudo
@@ -691,6 +670,30 @@ export
 MAKE
 )
 tier_nspr
+ifdef
+ENABLE_TESTS
+#
+Additional
+makefile
+targets
+to
+call
+automated
+test
+suites
+include
+(
+topsrcdir
+)
+/
+testing
+/
+testsuite
+-
+targets
+.
+mk
+endif
 include
 (
 topsrcdir
