--- a/browser/Makefile.in
+++ b/browser/Makefile.in
@@ -421,6 +421,23 @@ locales
 themes
 fuel
 app
+ifeq
+(
+(
+OS_ARCH
+)
+WINNT
+)
+ifdef
+MOZ_INSTALLER
+DIRS
++
+=
+installer
+/
+windows
+endif
+endif
 include
 (
 topsrcdir
@@ -440,12 +457,6 @@ WINNT
 )
 ifdef
 MOZ_INSTALLER
-DIRS
-+
-=
-installer
-/
-windows
 ifdef
 MOZ_BRANDING_DIRECTORY
 DEFINES
