bug 470415 - call exanduser on mochitest logfile argument. r=ted
UltraBlame original commit: 63719f0f1d85d9a19d052c724bafebbc8acca39a

--- a/testing/mochitest/runtests.py.in
+++ b/testing/mochitest/runtests.py.in
@@ -2621,6 +2621,26 @@ options
 .
 logFile
 :
+logpath
+=
+os
+.
+path
+.
+join
+(
+oldcwd
+os
+.
+path
+.
+expanduser
+(
+options
+.
+logFile
+)
+)
 options
 .
 logFile
@@ -2631,17 +2651,7 @@ path
 .
 normpath
 (
-os
-.
-path
-.
-join
-(
-oldcwd
-options
-.
-logFile
-)
+logpath
 )
 if
 options
