Bug 461309: Let browser/installer/Makefile.in permit 'make clean' in debug builds. r=bsmedberg
Check for debug builds only for the targets that matter.  The 'clean'
and 'distclean' targets, for example, may need to recur into
browser/installer/Makefile.in.

UltraBlame original commit: 86e908446af49c1a5a9951a91d228c37a7b5837f

--- a/browser/installer/Makefile.in
+++ b/browser/installer/Makefile.in
@@ -540,12 +540,21 @@ static
 endif
 endif
 else
-(
-error
-you
-need
-a
-"
+define
+message
+Please
+don
+'
+t
+package
+debug
+builds
+.
+Your
+build
+was
+configured
+without
 -
 -
 enable
@@ -557,12 +566,28 @@ or
 enable
 -
 libxul
-"
-build
-to
-package
+.
+This
+is
+probably
+because
+it
+'
+s
 a
+debug
 build
+endef
+default
+libs
+installer
+:
+:
+(
+error
+(
+message
+)
 )
 endif
 MOZ_NONLOCALIZED_PKG_LIST
@@ -713,6 +738,7 @@ packager
 .
 mk
 installer
+:
 :
 removed
 -
