Bug 462914: Test for setlocale at configure time in js/src r=crowder
UltraBlame original commit: 28b54ba6b10633d5daa9b8e2bb20ff7a125ea176

--- a/js/src/configure.in
+++ b/js/src/configure.in
@@ -42008,6 +42008,127 @@ dnl
 =
 =
 dnl
+JavaScript
+shell
+dnl
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+AC_HAVE_FUNCS
+(
+setlocale
+)
+dnl
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+dnl
 Use
 cygwin
 wrapper
