Bug 469225: Make js/src/configure take a --disable-arm-vfp option. r=vladimir
This controls whether NJ_ARM_VFP is #defined in the SpiderMonkey
build.  By default it is enabled.

Note that commenting out the hard-wired definition of NJ_ARM_VFP in
js/src/nanojit/NativeARM.h makes that line of the file match what's in
tamarin-redux, so hopefully there won't be conflicts with whatever
arrangement Adobe comes up with to control this.

UltraBlame original commit: 11dd18e830d956dc540a69be29fa8f689c59e46e

--- a/js/src/configure.in
+++ b/js/src/configure.in
@@ -22148,6 +22148,54 @@ socket
 socket
 )
 dnl
+Enable
+VFP
+support
+on
+ARM
+MOZ_ARG_DISABLE_BOOL
+(
+arm
+-
+vfp
+[
+-
+-
+disable
+-
+arm
+-
+vfp
+Disable
+ARM
+VFP
+instructions
+in
+JavaScript
+JIT
+]
+MOZ_ARM_VFP
+=
+MOZ_ARM_VFP
+=
+1
+MOZ_ARM_VFP
+=
+1
+)
+if
+test
+"
+MOZ_ARM_VFP
+"
+;
+then
+AC_DEFINE
+(
+NJ_ARM_VFP
+)
+fi
+dnl
 =
 =
 =
