Bug 458892 -  Change deb description for xulrunner  r=stuart
UltraBlame original commit: 864222fe286285b10dccd21bd8606d45340790ea

--- a/xulrunner/installer/debian/control
+++ b/xulrunner/installer/debian/control
@@ -302,43 +302,29 @@ zlib1g
 )
 Description
 :
-Project
-aiming
-to
-create
-a
 XUL
-runtime
-that
-requires
-no
-browser
-.
-XULRunner
-is
-a
-Mozilla
 runtime
 package
-that
-can
-be
+A
+runtime
+package
 used
 to
-bootstrap
+create
 XUL
-+
-XPCOM
+-
+based
 applications
-that
-are
-as
-rich
-as
-Firefox
-and
-Thunderbird
-.
+or
+embed
+Mozilla
+'
+s
+Gecko
+engine
+into
+other
+applications
 XB
 -
 Maemo
