Bug 467583: Make js/src share the 'dist' tree with the enclosing build. r=ted.mielczarek
UltraBlame original commit: ce93ff4c5f0cabb5b86e5a252acf25c6e6f1b307

--- a/configure.in
+++ b/configure.in
@@ -71568,6 +71568,26 @@ ac_configure_args
 ac_configure_args
 -
 -
+with
+-
+dist
+-
+dir
+=
+.
+.
+/
+.
+.
+/
+dist
+"
+ac_configure_args
+=
+"
+ac_configure_args
+-
+-
 includedir
 =
 dist
