--- a/js/src/config/autoconf.mk.in
+++ b/js/src/config/autoconf.mk.in
@@ -492,13 +492,36 @@ devel
 (
 MOZ_APP_VERSION
 )
+TOP_DIST
+=
+TOP_DIST
+ifneq
+(
+(
+filter
+/
+%
+(
+TOP_DIST
+)
+)
+)
+DIST
+=
+(
+TOP_DIST
+)
+else
 DIST
 =
 (
 DEPTH
 )
 /
-dist
+(
+TOP_DIST
+)
+endif
 MOZ_JS_LIBS
 =
 MOZ_JS_LIBS
