--- a/js/src/configure.in
+++ b/js/src/configure.in
@@ -1644,6 +1644,130 @@ MOZ_BUILD_ROOT
 =
 pwd
 dnl
+Choose
+where
+to
+put
+the
+'
+dist
+'
+directory
+.
+dnl
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+MOZ_ARG_WITH_STRING
+(
+dist
+-
+dir
+[
+-
+-
+with
+-
+dist
+-
+dir
+=
+DIR
+Use
+DIR
+as
+'
+dist
+'
+staging
+area
+.
+DIR
+may
+be
+relative
+to
+the
+top
+of
+SpiderMonkey
+build
+tree
+or
+absolute
+.
+]
+TOP_DIST
+=
+withval
+TOP_DIST
+=
+dist
+)
+AC_SUBST
+(
+TOP_DIST
+)
+dnl
 Default
 to
 MSVC
