Check consistency before returning 'border' shorthand.  (Bug 376075)  r+sr=bzbarsky
UltraBlame original commit: d696886de032cdb4eac542620f83d1e4f0accbf3

--- a/layout/style/test/Makefile.in
+++ b/layout/style/test/Makefile.in
@@ -741,6 +741,10 @@ test_selectors_on_anonymous_content
 .
 html
 \
+test_shorthand_property_getters
+.
+html
+\
 test_style_struct_copy_constructors
 .
 html
