bug 469593 - test_423060.xul fails on SeaMonkey, r=gavin
UltraBlame original commit: 35de15b279bc53e4800f941a39d1ff99610c1856

--- a/browser/components/feeds/test/chrome/Makefile.in
+++ b/browser/components/feeds/test/chrome/Makefile.in
@@ -1,4 +1,5 @@
 #
+#
 *
 *
 *
@@ -157,8 +158,9 @@ Original
 Code
 is
 #
-Phil
-Ringnalda
+Mozilla
+.
+org
 .
 #
 Portions
@@ -172,7 +174,7 @@ Copyright
 (
 C
 )
-2007
+2005
 #
 the
 Initial
@@ -394,6 +396,9 @@ DEPTH
 /
 .
 .
+/
+.
+.
 topsrcdir
 =
 top_srcdir
@@ -412,6 +417,8 @@ components
 feeds
 /
 test
+/
+chrome
 include
 (
 DEPTH
@@ -422,20 +429,6 @@ config
 autoconf
 .
 mk
-MODULE
-=
-test_browser_feeds
-XPCSHELL_TESTS
-=
-unit
-DIRS
-=
-\
-chrome
-\
-(
-NULL
-)
 include
 (
 topsrcdir
@@ -446,31 +439,38 @@ config
 rules
 .
 mk
-_TEST_FILES
+#
+sample_feed
+.
+atom
+was
+copied
+from
+toolkit
+/
+components
+/
+places
+/
+tests
+/
+chrome
+_HTTP_FILES
 =
-test_bug408328
-.
-html
 \
-bug408328
--
-data
+sample_feed
 .
-xml
+atom
 \
-test_bug368464
-.
-html
+(
+NULL
+)
+_CHROME_FILES
+=
 \
-bug368464
--
-data
+test_423060
 .
-xml
-\
-test_registerHandler
-.
-html
+xul
 \
 (
 NULL
@@ -479,7 +479,7 @@ libs
 :
 :
 (
-_TEST_FILES
+_HTTP_FILES
 )
 (
 INSTALL
@@ -503,6 +503,38 @@ testing
 mochitest
 /
 tests
+/
+(
+relativesrcdir
+)
+libs
+:
+:
+(
+_CHROME_FILES
+)
+(
+INSTALL
+)
+(
+foreach
+f
+^
+"
+f
+"
+)
+(
+DEPTH
+)
+/
+_tests
+/
+testing
+/
+mochitest
+/
+chrome
 /
 (
 relativesrcdir
