--- a/browser/locales/Makefile.in
+++ b/browser/locales/Makefile.in
@@ -742,8 +742,8 @@ PWD
 )
 )
 #
-ZIP_IN
-is
+These
+are
 defaulted
 to
 be
@@ -764,7 +764,7 @@ pulls
 You
 may
 override
-ZIP_IN
+them
 if
 you
 provide
@@ -773,18 +773,17 @@ own
 files
 .
 You
-also
 _must_
 #
 override
-ZIP_IN
+them
 when
 MOZ_PKG_PRETTYNAMES
 is
 defined
 -
 the
-default
+defaults
 will
 not
 #
@@ -803,6 +802,21 @@ _ABS_DIST
 (
 PACKAGE
 )
+WIN32_INSTALLER_IN
+?
+=
+(
+_ABS_DIST
+)
+/
+(
+PKG_INST_PATH
+)
+(
+PKG_INST_BASENAME
+)
+.
+exe
 DEFINES
 +
 =
@@ -2172,28 +2186,6 @@ installer
 -
 %
 :
-WIN32_INSTALLER_IN
-=
-(
-_ABS_DIST
-)
-/
-(
-PKG_INST_PATH
-)
-(
-PKG_INST_BASENAME
-)
-.
-exe
-repackage
--
-win32
--
-installer
--
-%
-:
 (
 WIN32_INSTALLER_IN
 )
@@ -2271,7 +2263,7 @@ l10n
 stage
 /
 (
-MOZ_PKG_APPNAME
+MOZ_PKG_DIR
 )
 endif
 (
@@ -2913,21 +2905,6 @@ DIST
 PACKAGE
 )
 "
-repackage
--
-zip
--
-%
-:
-ZIP_IN
-=
-(
-_ABS_DIST
-)
-/
-(
-PACKAGE
-)
 repackage
 -
 zip
@@ -3924,6 +3901,122 @@ vR
 (
 UPLOAD_DIR
 )
+l10n
+-
+upload
+-
+%
+:
+AB_CD
+=
+*
+l10n
+-
+upload
+-
+%
+:
+(
+PYTHON
+)
+(
+topsrcdir
+)
+/
+build
+/
+upload
+.
+py
+-
+-
+base
+-
+path
+(
+DIST
+)
+"
+(
+DIST
+)
+/
+(
+PACKAGE
+)
+"
+(
+DIST
+)
+/
+(
+LANGPACK
+)
+ifdef
+MOZ_MAKE_COMPLETE_MAR
+(
+PYTHON
+)
+(
+topsrcdir
+)
+/
+build
+/
+upload
+.
+py
+-
+-
+base
+-
+path
+(
+DIST
+)
+(
+DIST
+)
+/
+(
+COMPLETE_MAR
+)
+;
+\
+endif
+ifeq
+(
+WINNT
+(
+OS_ARCH
+)
+)
+(
+PYTHON
+)
+(
+topsrcdir
+)
+/
+build
+/
+upload
+.
+py
+-
+-
+base
+-
+path
+(
+DIST
+)
+"
+(
+INSTALLER_PACKAGE
+)
+"
+endif
 merge
 -
 %
