bug 462004 - JavaScript shell should provide line editing facilities. r=bsmedberg
UltraBlame original commit: 55e23c6471379101a0e8a8e1f1f0e0b39b26c711

--- a/js/src/Makefile.in
+++ b/js/src/Makefile.in
@@ -470,61 +470,38 @@ NSDISTMODE
 =
 copy
 endif
+ifdef
+JS_NATIVE_EDITLINE
+DIRS
++
+=
+editline
+endif
+#
+editline
+needs
+to
+get
+built
+before
+the
+shell
+DIRS
++
+=
+shell
 MODULE
 =
 js
 LIBRARY_NAME
 =
 mozjs
+STATIC_LIBRARY_NAME
+=
+js_static
 GRE_MODULE
 =
 1
-PROGRAM
-=
-js
-(
-BIN_SUFFIX
-)
-#
-The
-shell
-uses
-some
-'
-HIDDEN
-'
-symbols
-to
-produce
-statistics
-so
-we
-#
-link
-directly
-against
-the
-.
-o
-files
-not
-against
-the
-JS
-shared
-#
-library
-.
-PROGOBJS
-=
-js
-.
-(
-OBJ_SUFFIX
-)
-(
-OBJS
-)
 LIBS
 =
 (
@@ -739,12 +716,40 @@ no
 longer
 work
 .
-ifndef
-JS_STATIC_BUILD
+#
+#
+In
+fact
+we
+now
+build
+both
+a
+static
+and
+a
+shared
+library
+as
+the
+#
+JS
+shell
+would
+like
+to
+link
+to
+the
+static
+library
+.
 FORCE_SHARED_LIB
 =
 1
-endif
+FORCE_STATIC_LIB
+=
+1
 ifeq
 (
 86
@@ -3684,6 +3689,50 @@ IFLAGS2
 (
 bindir
 )
+install
+:
+:
+(
+LIBRARY
+)
+ifneq
+(
+(
+LIBRARY
+)
+)
+(
+INSTALL
+)
+(
+IFLAGS1
+)
+(
+LIBRARY
+)
+(
+libdir
+)
+endif
+ifneq
+(
+(
+IMPORT_LIBRARY
+)
+)
+(
+INSTALL
+)
+(
+IFLAGS2
+)
+(
+IMPORT_LIBRARY
+)
+(
+libdir
+)
+endif
 #
 The
 Mozilla
@@ -3744,25 +3793,6 @@ IMPORT_LIBRARY
 ifneq
 (
 (
-LIBRARY
-)
-)
-(
-INSTALL
-)
-(
-IFLAGS1
-)
-(
-LIBRARY
-)
-(
-libdir
-)
-endif
-ifneq
-(
-(
 SHARED_LIBRARY
 )
 )
@@ -3774,25 +3804,6 @@ IFLAGS2
 )
 (
 SHARED_LIBRARY
-)
-(
-libdir
-)
-endif
-ifneq
-(
-(
-IMPORT_LIBRARY
-)
-)
-(
-INSTALL
-)
-(
-IFLAGS2
-)
-(
-IMPORT_LIBRARY
 )
 (
 libdir
