--- a/js/src/configure.in
+++ b/js/src/configure.in
@@ -29849,8 +29849,6 @@ ENABLE_TESTS
 1
 MOZ_DBGRINFO_MODULES
 =
-JS_STATIC_BUILD
-=
 dnl
 =
 =
@@ -40228,13 +40226,12 @@ dnl
 =
 dnl
 =
-Force
-JS
+Link
+js
+shell
 to
-be
-a
-static
-lib
+system
+readline
 dnl
 =
 =
@@ -40294,86 +40291,133 @@ dnl
 =
 MOZ_ARG_ENABLE_BOOL
 (
-js
--
-static
--
-build
+readline
 [
 -
 -
 enable
 -
+readline
+Link
 js
--
-static
--
-build
-Force
-js
+shell
 to
-be
-a
-static
-lib
+system
+readline
+library
 ]
-JS_STATIC_BUILD
+JS_WANT_READLINE
 =
 1
-JS_STATIC_BUILD
+JS_WANT_READLINE
 =
 )
-AC_SUBST
-(
-JS_STATIC_BUILD
-)
-if
-test
--
-n
-"
-JS_STATIC_BUILD
-"
-;
-then
-AC_DEFINE
-(
-EXPORT_JS_API
-)
+JS_NATIVE_EDITLINE
+=
+EDITLINE_LIBS
+=
+dnl
+Conveniently
+Win32
+sets
+SKIP_LIBRARY_CHECKS
+.
+.
+.
 if
 test
 -
 z
 "
-BUILD_STATIC_LIBS
+SKIP_LIBRARY_CHECKS
 "
 ;
 then
+if
+test
+-
+n
+"
+JS_WANT_READLINE
+"
+;
+then
+AC_CHECK_LIB
+(
+readline
+readline
+EDITLINE_LIBS
+=
+"
+-
+lreadline
+"
 AC_MSG_ERROR
 (
 [
--
--
-enable
--
-js
--
-static
--
-build
-is
-only
-compatible
-with
--
--
-enable
--
-static
+No
+system
+readline
+library
+found
+.
 ]
 )
+)
+else
+dnl
+By
+default
+we
+use
+editline
+JS_NATIVE_EDITLINE
+=
+1
+EDITLINE_LIBS
+=
+'
+(
+DEPTH
+)
+/
+editline
+/
+(
+LIB_PREFIX
+)
+editline
+.
+(
+LIB_SUFFIX
+)
+'
 fi
+dnl
+Either
+way
+we
+want
+to
+build
+with
+line
+editing
+support
+.
+AC_DEFINE
+(
+EDITLINE
+)
 fi
+AC_SUBST
+(
+JS_NATIVE_EDITLINE
+)
+AC_SUBST
+(
+EDITLINE_LIBS
+)
 dnl
 =
 =
@@ -42881,6 +42925,9 @@ MAKEFILES
 =
 "
 Makefile
+shell
+/
+Makefile
 config
 /
 Makefile
@@ -42895,6 +42942,24 @@ mkdepend
 /
 Makefile
 "
+if
+test
+-
+n
+"
+JS_NATIVE_EDITLINE
+"
+;
+then
+MAKEFILES
+=
+"
+MAKEFILES
+editline
+/
+Makefile
+"
+fi
 dnl
 dnl
 Run
