Bug 460977 - make -C browser/locales langpack-AB_CD is not compatible with --enable-chrome-format=flat; r=(bhearsum + l10n + ted.mielczarek)
UltraBlame original commit: 6629bb8baf418adc58665634f58d777851debd36

--- a/browser/locales/Makefile.in
+++ b/browser/locales/Makefile.in
@@ -3090,6 +3090,30 @@ jar
 chrome
 .
 manifest
+(
+ZIP
+)
+-
+r9D
+(
+LANGPACK_FILE
+)
+install
+.
+rdf
+chrome
+chrome
+.
+manifest
+-
+x
+chrome
+/
+(
+AB_CD
+)
+.
+manifest
 #
 This
 is
