Disabled failing test -- Bug 471139 - mochitest failure in test_HTMLDocument12.html
UltraBlame original commit: a100873f37b700bf1cdd69c1ae0a1d78b4eaa03f

--- a/dom/tests/mochitest/dom-level2-html/Makefile.in
+++ b/dom/tests/mochitest/dom-level2-html/Makefile.in
@@ -782,6 +782,24 @@ html
 (
 NULL
 )
+#
+This
+test
+is
+failing
+on
+all
+platforms
+-
+-
+bug
+471139
+#
+test_HTMLDocument12
+.
+html
+\
+#
 _TEST_FILES_B
 =
 \
@@ -834,10 +852,6 @@ test_HTMLDocument10
 html
 \
 test_HTMLDocument11
-.
-html
-\
-test_HTMLDocument12
 .
 html
 \
