--- a/js/src/Makefile.in
+++ b/js/src/Makefile.in
@@ -470,38 +470,61 @@ NSDISTMODE
 =
 copy
 endif
-ifdef
-JS_NATIVE_EDITLINE
-DIRS
-+
-=
-editline
-endif
-#
-editline
-needs
-to
-get
-built
-before
-the
-shell
-DIRS
-+
-=
-shell
 MODULE
 =
 js
 LIBRARY_NAME
 =
 mozjs
-STATIC_LIBRARY_NAME
-=
-js_static
 GRE_MODULE
 =
 1
+PROGRAM
+=
+js
+(
+BIN_SUFFIX
+)
+#
+The
+shell
+uses
+some
+'
+HIDDEN
+'
+symbols
+to
+produce
+statistics
+so
+we
+#
+link
+directly
+against
+the
+.
+o
+files
+not
+against
+the
+JS
+shared
+#
+library
+.
+PROGOBJS
+=
+js
+.
+(
+OBJ_SUFFIX
+)
+(
+OBJS
+)
 LIBS
 =
 (
@@ -716,40 +739,12 @@ no
 longer
 work
 .
-#
-#
-In
-fact
-we
-now
-build
-both
-a
-static
-and
-a
-shared
-library
-as
-the
-#
-JS
-shell
-would
-like
-to
-link
-to
-the
-static
-library
-.
+ifndef
+JS_STATIC_BUILD
 FORCE_SHARED_LIB
 =
 1
-FORCE_STATIC_LIB
-=
-1
+endif
 ifeq
 (
 86
@@ -3689,50 +3684,6 @@ IFLAGS2
 (
 bindir
 )
-install
-:
-:
-(
-LIBRARY
-)
-ifneq
-(
-(
-LIBRARY
-)
-)
-(
-INSTALL
-)
-(
-IFLAGS1
-)
-(
-LIBRARY
-)
-(
-libdir
-)
-endif
-ifneq
-(
-(
-IMPORT_LIBRARY
-)
-)
-(
-INSTALL
-)
-(
-IFLAGS2
-)
-(
-IMPORT_LIBRARY
-)
-(
-libdir
-)
-endif
 #
 The
 Mozilla
@@ -3793,6 +3744,25 @@ IMPORT_LIBRARY
 ifneq
 (
 (
+LIBRARY
+)
+)
+(
+INSTALL
+)
+(
+IFLAGS1
+)
+(
+LIBRARY
+)
+(
+libdir
+)
+endif
+ifneq
+(
+(
 SHARED_LIBRARY
 )
 )
@@ -3804,6 +3774,25 @@ IFLAGS2
 )
 (
 SHARED_LIBRARY
+)
+(
+libdir
+)
+endif
+ifneq
+(
+(
+IMPORT_LIBRARY
+)
+)
+(
+INSTALL
+)
+(
+IFLAGS2
+)
+(
+IMPORT_LIBRARY
 )
 (
 libdir
@@ -4055,37 +4044,18 @@ javascript
 trace
 .
 h
-#
-We
-can
-'
-t
-automatically
-generate
-dependencies
-on
-auto
--
-generated
-headers
-;
-#
-we
-have
-to
-list
-them
-explicitly
-.
 (
-addsuffix
+CPPSRCS
+:
+%
+.
+cpp
+=
+%
 .
 (
 OBJ_SUFFIX
 )
-jsdtracef
-jsinterp
-jsobj
 )
 :
 (
@@ -4098,3 +4068,62 @@ trace
 .
 h
 endif
+imacro_asm
+.
+js
+:
+imacro_asm
+.
+js
+.
+in
+(
+CC
+)
+-
+c
+-
+x
+c
+-
+E
+-
+P
+-
+I
+(
+srcdir
+)
+?
+>
+GARBAGE
++
+=
+imacro_asm
+.
+js
+%
+.
+c
+.
+out
+:
+%
+.
+jsasm
+(
+PROGRAM
+)
+imacro_asm
+.
+js
+.
+/
+(
+PROGRAM
+)
+imacro_asm
+.
+js
+<
+>
