--- a/js/src/Makefile.in
+++ b/js/src/Makefile.in
@@ -4068,3 +4068,62 @@ trace
 .
 h
 endif
+imacro_asm
+.
+js
+:
+imacro_asm
+.
+js
+.
+in
+(
+CC
+)
+-
+c
+-
+x
+c
+-
+E
+-
+P
+-
+I
+(
+srcdir
+)
+?
+>
+GARBAGE
++
+=
+imacro_asm
+.
+js
+%
+.
+c
+.
+out
+:
+%
+.
+jsasm
+(
+PROGRAM
+)
+imacro_asm
+.
+js
+.
+/
+(
+PROGRAM
+)
+imacro_asm
+.
+js
+<
+>
