Bug 468937 - Add some basic tests for the red/green (cx->fp) analysis
UltraBlame original commit: 12a753e1880be9d946b674f8f81b80734b536459

--- a/js/src/Makefile.in
+++ b/js/src/Makefile.in
@@ -407,9 +407,6 @@ top_srcdir
 srcdir
 =
 srcdir
-DIRS
-=
-config
 include
 (
 DEPTH
@@ -420,6 +417,18 @@ config
 autoconf
 .
 mk
+DIRS
+=
+config
+ifdef
+DEHYDRA_PATH
+DIRS
++
+=
+analysis
+-
+tests
+endif
 ifndef
 JS_MOZ_INSTALL
 #
