--- a/js/src/imacro_asm.js.in
+++ b/js/src/imacro_asm.js.in
@@ -964,6 +964,31 @@ flags
 indexOf
 (
 "
+JOF_UINT8
+"
+)
+>
+=
+0
+)
+return
+(
+op
+.
+imm1
+&
+0xff
+)
+;
+if
+(
+info
+.
+flags
+.
+indexOf
+(
+"
 JOF_UINT16
 "
 )
