Bug 469942 - TM: 20% slower to compute unary +/-.  r=brendan
UltraBlame original commit: d0779fe10486338b57c00b35f7b5ec631bedd27d

--- a/js/src/imacro_asm.js.in
+++ b/js/src/imacro_asm.js.in
@@ -970,7 +970,23 @@ JOF_UINT8
 >
 =
 0
+|
+|
+info
+.
+flags
+.
+indexOf
+(
+"
+JOF_INT8
+"
 )
+>
+=
+0
+)
+{
 return
 (
 op
@@ -980,6 +996,7 @@ imm1
 0xff
 )
 ;
+}
 if
 (
 info
