--- a/testing/mochitest/Makefile.in
+++ b/testing/mochitest/Makefile.in
@@ -867,6 +867,29 @@ DIS_TEST_BUILD
 =
 0
 endif
+ifeq
+(
+(
+MOZ_DEBUG
+)
+1
+)
+TEST_DRIVER_PPARGS
++
+=
+-
+DIS_DEBUG_BUILD
+=
+1
+else
+TEST_DRIVER_PPARGS
++
+=
+-
+DIS_DEBUG_BUILD
+=
+0
+endif
 runtests
 .
 py
