Backed out changeset 55e23c647137 (bug 462004) so the backout for bug 467862 to solve bug 471097 can actually build
UltraBlame original commit: bac73f9f2d2b28630201fe2a2511b3a5bce0f68e

--- a/js/src/Makefile.in
+++ b/js/src/Makefile.in
@@ -407,6 +407,9 @@ top_srcdir
 srcdir
 =
 srcdir
+DIRS
+=
+config
 include
 (
 DEPTH
@@ -417,18 +420,6 @@ config
 autoconf
 .
 mk
-DIRS
-=
-config
-ifdef
-DEHYDRA_PATH
-DIRS
-+
-=
-analysis
--
-tests
-endif
 ifndef
 JS_MOZ_INSTALL
 #
@@ -479,38 +470,61 @@ NSDISTMODE
 =
 copy
 endif
-ifdef
-JS_NATIVE_EDITLINE
-DIRS
-+
-=
-editline
-endif
-#
-editline
-needs
-to
-get
-built
-before
-the
-shell
-DIRS
-+
-=
-shell
 MODULE
 =
 js
 LIBRARY_NAME
 =
 mozjs
-STATIC_LIBRARY_NAME
-=
-js_static
 GRE_MODULE
 =
 1
+PROGRAM
+=
+js
+(
+BIN_SUFFIX
+)
+#
+The
+shell
+uses
+some
+'
+HIDDEN
+'
+symbols
+to
+produce
+statistics
+so
+we
+#
+link
+directly
+against
+the
+.
+o
+files
+not
+against
+the
+JS
+shared
+#
+library
+.
+PROGOBJS
+=
+js
+.
+(
+OBJ_SUFFIX
+)
+(
+OBJS
+)
 LIBS
 =
 (
@@ -725,40 +739,12 @@ no
 longer
 work
 .
-#
-#
-In
-fact
-we
-now
-build
-both
-a
-static
-and
-a
-shared
-library
-as
-the
-#
-JS
-shell
-would
-like
-to
-link
-to
-the
-static
-library
-.
+ifndef
+JS_STATIC_BUILD
 FORCE_SHARED_LIB
 =
 1
-FORCE_STATIC_LIB
-=
-1
+endif
 ifeq
 (
 86
@@ -3698,50 +3684,6 @@ IFLAGS2
 (
 bindir
 )
-install
-:
-:
-(
-LIBRARY
-)
-ifneq
-(
-(
-LIBRARY
-)
-)
-(
-INSTALL
-)
-(
-IFLAGS1
-)
-(
-LIBRARY
-)
-(
-libdir
-)
-endif
-ifneq
-(
-(
-IMPORT_LIBRARY
-)
-)
-(
-INSTALL
-)
-(
-IFLAGS2
-)
-(
-IMPORT_LIBRARY
-)
-(
-libdir
-)
-endif
 #
 The
 Mozilla
@@ -3802,6 +3744,25 @@ IMPORT_LIBRARY
 ifneq
 (
 (
+LIBRARY
+)
+)
+(
+INSTALL
+)
+(
+IFLAGS1
+)
+(
+LIBRARY
+)
+(
+libdir
+)
+endif
+ifneq
+(
+(
 SHARED_LIBRARY
 )
 )
@@ -3813,6 +3774,25 @@ IFLAGS2
 )
 (
 SHARED_LIBRARY
+)
+(
+libdir
+)
+endif
+ifneq
+(
+(
+IMPORT_LIBRARY
+)
+)
+(
+INSTALL
+)
+(
+IFLAGS2
+)
+(
+IMPORT_LIBRARY
 )
 (
 libdir
@@ -4107,62 +4087,3 @@ trace
 .
 h
 endif
-imacro_asm
-.
-js
-:
-imacro_asm
-.
-js
-.
-in
-(
-CC
-)
--
-c
--
-x
-c
--
-E
--
-P
--
-I
-(
-srcdir
-)
-?
->
-GARBAGE
-+
-=
-imacro_asm
-.
-js
-%
-.
-c
-.
-out
-:
-%
-.
-jsasm
-(
-PROGRAM
-)
-imacro_asm
-.
-js
-.
-/
-(
-PROGRAM
-)
-imacro_asm
-.
-js
-<
->
