--- a/js/src/config/autoconf.mk.in
+++ b/js/src/config/autoconf.mk.in
@@ -618,6 +618,9 @@ ENABLE_TESTS
 JS_ULTRASPARC_OPTS
 =
 JS_ULTRASPARC_OPTS
+JS_STATIC_BUILD
+=
+JS_STATIC_BUILD
 TAR
 =
 TAR
@@ -1095,12 +1098,6 @@ NSPR_LIBS
 USE_DEPENDENT_LIBS
 =
 USE_DEPENDENT_LIBS
-JS_NATIVE_EDITLINE
-=
-JS_NATIVE_EDITLINE
-EDITLINE_LIBS
-=
-EDITLINE_LIBS
 #
 MKSHLIB_FORCE_ALL
 is
