--- a/config/autoconf.mk.in
+++ b/config/autoconf.mk.in
@@ -693,6 +693,9 @@ XPCOM_USE_LEA
 JS_ULTRASPARC_OPTS
 =
 JS_ULTRASPARC_OPTS
+JS_STATIC_BUILD
+=
+JS_STATIC_BUILD
 MOZ_ENABLE_POSTSCRIPT
 =
 MOZ_ENABLE_POSTSCRIPT
