--- a/configure.in
+++ b/configure.in
@@ -34929,6 +34929,8 @@ viewsource
 "
 NECKO_SMALL_BUFFERS
 =
+JS_STATIC_BUILD
+=
 XPC_IDISPATCH_SUPPORT
 =
 case
@@ -35242,6 +35244,9 @@ NS_DISABLE_LOGGING
 1
 NS_PRINTING
 =
+JS_STATIC_BUILD
+=
+1
 ;
 ;
 minimal
@@ -35361,6 +35366,9 @@ NS_DISABLE_LOGGING
 1
 NS_PRINTING
 =
+JS_STATIC_BUILD
+=
+1
 ;
 ;
 *
@@ -63177,6 +63185,211 @@ XPCOM_LIBS
 "
 DYNAMIC_XPCOM_LIBS
 "
+fi
+dnl
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+dnl
+=
+Force
+JS
+to
+be
+a
+static
+lib
+dnl
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+MOZ_ARG_ENABLE_BOOL
+(
+js
+-
+static
+-
+build
+[
+-
+-
+enable
+-
+js
+-
+static
+-
+build
+Force
+js
+to
+be
+a
+static
+lib
+]
+JS_STATIC_BUILD
+=
+1
+JS_STATIC_BUILD
+=
+)
+AC_SUBST
+(
+JS_STATIC_BUILD
+)
+if
+test
+-
+n
+"
+JS_STATIC_BUILD
+"
+;
+then
+AC_DEFINE
+(
+EXPORT_JS_API
+)
+if
+test
+-
+z
+"
+BUILD_STATIC_LIBS
+"
+;
+then
+AC_MSG_ERROR
+(
+[
+-
+-
+enable
+-
+js
+-
+static
+-
+build
+is
+only
+compatible
+with
+-
+-
+enable
+-
+static
+]
+)
+fi
 fi
 dnl
 =
