--- a/js/src/configure.in
+++ b/js/src/configure.in
@@ -29849,6 +29849,8 @@ ENABLE_TESTS
 1
 MOZ_DBGRINFO_MODULES
 =
+JS_STATIC_BUILD
+=
 dnl
 =
 =
@@ -40226,12 +40228,13 @@ dnl
 =
 dnl
 =
-Link
-js
-shell
+Force
+JS
 to
-system
-readline
+be
+a
+static
+lib
 dnl
 =
 =
@@ -40291,133 +40294,86 @@ dnl
 =
 MOZ_ARG_ENABLE_BOOL
 (
-readline
+js
+-
+static
+-
+build
 [
 -
 -
 enable
 -
-readline
-Link
 js
-shell
+-
+static
+-
+build
+Force
+js
 to
-system
-readline
-library
+be
+a
+static
+lib
 ]
-JS_WANT_READLINE
+JS_STATIC_BUILD
 =
 1
-JS_WANT_READLINE
+JS_STATIC_BUILD
 =
 )
-JS_NATIVE_EDITLINE
-=
-EDITLINE_LIBS
-=
-dnl
-Conveniently
-Win32
-sets
-SKIP_LIBRARY_CHECKS
-.
-.
-.
-if
-test
--
-z
-"
-SKIP_LIBRARY_CHECKS
-"
-;
-then
+AC_SUBST
+(
+JS_STATIC_BUILD
+)
 if
 test
 -
 n
 "
-JS_WANT_READLINE
+JS_STATIC_BUILD
 "
 ;
 then
-AC_CHECK_LIB
+AC_DEFINE
 (
-readline
-readline
-EDITLINE_LIBS
-=
-"
+EXPORT_JS_API
+)
+if
+test
 -
-lreadline
+z
 "
+BUILD_STATIC_LIBS
+"
+;
+then
 AC_MSG_ERROR
 (
 [
-No
-system
-readline
-library
-found
-.
+-
+-
+enable
+-
+js
+-
+static
+-
+build
+is
+only
+compatible
+with
+-
+-
+enable
+-
+static
 ]
 )
-)
-else
-dnl
-By
-default
-we
-use
-editline
-JS_NATIVE_EDITLINE
-=
-1
-EDITLINE_LIBS
-=
-'
-(
-DEPTH
-)
-/
-editline
-/
-(
-LIB_PREFIX
-)
-editline
-.
-(
-LIB_SUFFIX
-)
-'
 fi
-dnl
-Either
-way
-we
-want
-to
-build
-with
-line
-editing
-support
-.
-AC_DEFINE
-(
-EDITLINE
-)
 fi
-AC_SUBST
-(
-JS_NATIVE_EDITLINE
-)
-AC_SUBST
-(
-EDITLINE_LIBS
-)
 dnl
 =
 =
@@ -42925,9 +42881,6 @@ MAKEFILES
 =
 "
 Makefile
-shell
-/
-Makefile
 config
 /
 Makefile
@@ -42942,24 +42895,6 @@ mkdepend
 /
 Makefile
 "
-if
-test
--
-n
-"
-JS_NATIVE_EDITLINE
-"
-;
-then
-MAKEFILES
-=
-"
-MAKEFILES
-editline
-/
-Makefile
-"
-fi
 dnl
 dnl
 Run
