Disabling the test that's timing out on linux only until I can reproduce
UltraBlame original commit: e476785f79e4b4f8ca8a0599e0228a10eb9fad77

--- a/dom/src/threads/test/Makefile.in
+++ b/dom/src/threads/test/Makefile.in
@@ -452,6 +452,33 @@ config
 rules
 .
 mk
+#
+Commenting
+out
+this
+test
+because
+it
+'
+s
+timing
+out
+on
+linux
+only
+.
+.
+.
+#
+test_scopeOnerror
+.
+html
+\
+#
+scopeOnerror_worker
+.
+js
+\
 _TEST_FILES
 =
 \
@@ -544,14 +571,6 @@ relativeLoad_worker2
 js
 \
 relativeLoad_import
-.
-js
-\
-test_scopeOnerror
-.
-html
-\
-scopeOnerror_worker
 .
 js
 \
