Bug 471839 - "Modify some of the URLs used in bookmarks file" [r=Pike]
UltraBlame original commit: 45f3d6c184e4bebbaac0a3b557b1a9d7f7228b81

--- a/browser/locales/generic/profile/bookmarks.html.in
+++ b/browser/locales/generic/profile/bookmarks.html.in
@@ -96,13 +96,11 @@ https
 :
 /
 /
-add
--
-ons
+addons
 .
 mozilla
 .
-com
+org
 /
 AB_CD
 /
@@ -399,8 +397,6 @@ http
 :
 /
 /
-AB_CD
-.
 fxfeeds
 .
 mozilla
@@ -421,8 +417,6 @@ http
 :
 /
 /
-AB_CD
-.
 fxfeeds
 .
 mozilla
