Replace space manager with a more limited float manager.  (Bug 191448)  r+sr=roc
UltraBlame original commit: 496e0cb5c943e630c473dbce949d6437e05c62ac

--- a/layout/generic/Makefile.in
+++ b/layout/generic/Makefile.in
@@ -593,10 +593,6 @@ nsBRFrame
 .
 cpp
 \
-nsBlockBandData
-.
-cpp
-\
 nsBlockFrame
 .
 cpp
@@ -622,6 +618,10 @@ nsContainerFrame
 cpp
 \
 nsFirstLetterFrame
+.
+cpp
+\
+nsFloatManager
 .
 cpp
 \
@@ -714,10 +714,6 @@ nsSelection
 cpp
 \
 nsSimplePageSequence
-.
-cpp
-\
-nsSpaceManager
 .
 cpp
 \
