Bug 451958. Implement load policy for media elements. r+sr=roc
UltraBlame original commit: a5587354082aa8dd09ab5a6fd50a40c1d844ca3a

--- a/content/media/video/test/Makefile.in
+++ b/content/media/video/test/Makefile.in
@@ -502,6 +502,20 @@ _TEST_FILES
 +
 =
 \
+test_access_control
+.
+html
+\
+test_access_control
+-
+2
+.
+html
+\
+file_access_controls
+.
+html
+\
 test_bug448534
 .
 html
@@ -578,9 +592,32 @@ html
 .
 ogg
 \
+320x240
+.
+allow
+-
+origin
+.
+ogg
+\
+320x240
+.
+allow
+-
+origin
+.
+ogg
+^
+headers
+^
+\
 bug461281
 .
 ogg
+\
+redirect
+.
+sjs
 \
 seek
 .
