--- a/toolkit/components/url-classifier/tests/mochitest/Makefile.in
+++ b/toolkit/components/url-classifier/tests/mochitest/Makefile.in
@@ -158,8 +158,8 @@ Original
 Code
 is
 #
-Google
-Inc
+Mozilla
+Corporation
 .
 #
 Portions
@@ -173,7 +173,7 @@ Copyright
 (
 C
 )
-2007
+2008
 #
 the
 Initial
@@ -207,6 +207,7 @@ terms
 of
 #
 either
+of
 the
 GNU
 General
@@ -222,8 +223,8 @@ the
 GPL
 "
 )
-or
 #
+or
 the
 GNU
 Lesser
@@ -394,6 +395,9 @@ DEPTH
 /
 .
 .
+/
+.
+.
 topsrcdir
 =
 top_srcdir
@@ -414,6 +418,13 @@ url
 classifier
 /
 tests
+/
+mochitest
+MODULE
+=
+test_url
+-
+classifier
 include
 (
 DEPTH
@@ -424,139 +435,6 @@ config
 autoconf
 .
 mk
-MODULE
-=
-test_url
--
-classifier
-MOZILLA_INTERNAL_API
-=
-1
-REQUIRES
-=
-\
-string
-\
-url
--
-classifier
-\
-xpcom
-\
-necko
-\
-(
-NULL
-)
-#
-mochitest
-tests
-DIRS
-+
-=
-mochitest
-\
-(
-NULL
-)
-#
-xpcshell
-tests
-XPCSHELL_TESTS
-=
-unit
-#
-simple
-c
-+
-+
-tests
-(
-no
-xpcom
-)
-CPPSRCS
-=
-\
-TestUrlClassifierUtils
-.
-cpp
-\
-(
-NULL
-)
-SIMPLE_PROGRAMS
-=
-(
-CPPSRCS
-:
-.
-cpp
-=
-(
-BIN_SUFFIX
-)
-)
-LOCAL_INCLUDES
-=
-\
--
-I
-(
-srcdir
-)
-/
-.
-.
-/
-src
-\
--
-I
-(
-srcdir
-)
-/
-.
-.
-/
-public
-\
-(
-NULL
-)
-LIBS
-=
-\
-.
-.
-/
-src
-/
-(
-LIB_PREFIX
-)
-urlclassifier_s
-.
-(
-LIB_SUFFIX
-)
-\
-(
-MOZ_COMPONENT_LIBS
-)
-\
-(
-XPCOM_LIBS
-)
-\
-(
-NSPR_LIBS
-)
-\
-(
-NULL
-)
 include
 (
 topsrcdir
@@ -567,38 +445,61 @@ config
 rules
 .
 mk
-check
+_TEST_FILES
+=
+\
+test_classifier
+.
+html
+\
+classifierFrame
+.
+html
+\
+evil
+.
+js
+\
+evil
+.
+css
+\
+import
+.
+css
+\
+(
+NULL
+)
+libs
 :
 :
-echo
-Running
+(
+_TEST_FILES
+)
+(
+INSTALL
+)
+(
+foreach
+f
+^
+"
+f
+"
+)
+(
+DEPTH
+)
+/
+_tests
+/
+testing
+/
+mochitest
+/
 tests
-.
-.
-.
-(
-EXIT_ON_ERROR
-)
-\
-for
-f
-in
-(
-SIMPLE_PROGRAMS
-)
-;
-do
-\
-(
-RUN_TEST_PROGRAM
-)
-(
-DIST
-)
 /
-bin
-/
-f
-;
-\
-done
+(
+relativesrcdir
+)
