Bug 468418 -  Expose level for nested lists in HTML, r=marcoz, aaronlev
UltraBlame original commit: 965d47130dfd3b2425a9ff490d4b982791b67658

--- a/accessible/tests/mochitest/Makefile.in
+++ b/accessible/tests/mochitest/Makefile.in
@@ -519,14 +519,13 @@ test_events_caretmove
 .
 html
 \
-(
-warning
 test_groupattrs
 .
 xul
-temporarily
-disabled
-)
+\
+test_groupattrs
+.
+html
 \
 (
 warning
