Backed out changeset 5b6c7ace97c4 this patch is fine, it just had the wrong comment.
UltraBlame original commit: c788b8e5de3d10af67fe4ecf5ffcbcd4399f5f6c

--- a/configure.in
+++ b/configure.in
@@ -2594,23 +2594,17 @@ shunt
 /
 include
 /
-mozce_windows_actual_incl
+windows
 .
 h
 echo
 "
 #
-include
-\
+define
+GetProcAddress
+GetProcAddressA
 "
-WINCE_SDK
-/
-ymath
-.
-h
-\
-"
-"
+>
 >
 srcdir
 /
@@ -2622,7 +2616,7 @@ shunt
 /
 include
 /
-mozce_ymath_actual_incl
+windows
 .
 h
 echo
