Bug 464180 - link error when building nsWaveDecoder on wince. r=ted
UltraBlame original commit: 5b6c7ace97c4c7acdfecd0e771d7254b32ee7dce

--- a/configure.in
+++ b/configure.in
@@ -2594,17 +2594,23 @@ shunt
 /
 include
 /
-windows
+mozce_windows_actual_incl
 .
 h
 echo
 "
 #
-define
-GetProcAddress
-GetProcAddressA
+include
+\
 "
->
+WINCE_SDK
+/
+ymath
+.
+h
+\
+"
+"
 >
 srcdir
 /
@@ -2616,7 +2622,7 @@ shunt
 /
 include
 /
-windows
+mozce_ymath_actual_incl
 .
 h
 echo
