Bug 470810: getDirInternal should cache ProfD. r=robstrong
UltraBlame original commit: f768b388a775550ebe610e8978d930ca080af3b4

--- a/toolkit/mozapps/extensions/src/nsExtensionManager.js.in
+++ b/toolkit/mozapps/extensions/src/nsExtensionManager.js.in
@@ -1580,6 +1580,11 @@ gVersionChecker
 null
 ;
 var
+gDirService
+=
+null
+;
+var
 gLoggingEnabled
 =
 null
@@ -2753,8 +2758,13 @@ pathArray
 shouldCreate
 )
 {
-var
-fileLocator
+if
+(
+!
+gDirService
+)
+{
+gDirService
 =
 Cc
 [
@@ -2778,10 +2788,11 @@ Ci
 nsIProperties
 )
 ;
+}
 var
 dir
 =
-fileLocator
+gDirService
 .
 get
 (
@@ -18129,6 +18140,10 @@ gVersionChecker
 =
 null
 ;
+gDirService
+=
+null
+;
 gInstallManifestRoot
 =
 null
@@ -18203,36 +18218,57 @@ EM__ensureDatasetIntegrity
 )
 {
 var
-extensionsDS
+profD
 =
-getFile
+getDirNoCreate
 (
 KEY_PROFILEDIR
 [
-FILE_EXTENSIONS
 ]
+)
+;
+var
+extensionsDS
+=
+profD
+.
+clone
+(
+)
+;
+extensionsDS
+.
+append
+(
+FILE_EXTENSIONS
 )
 ;
 var
 extensionsINI
 =
-getFile
+profD
+.
+clone
 (
-KEY_PROFILEDIR
-[
+)
+;
+extensionsINI
+.
+append
+(
 FILE_EXTENSION_MANIFEST
-]
 )
 ;
 var
 extensionsCache
 =
-getFile
+profD
+;
+extensionsCache
+.
+append
 (
-KEY_PROFILEDIR
-[
 FILE_EXTENSIONS_STARTUP_CACHE
-]
 )
 ;
 var
@@ -18273,7 +18309,11 @@ iniExists
 cacheExists
 )
 return
+[
 false
+!
+iniExists
+]
 ;
 /
 /
@@ -18332,7 +18372,11 @@ false
 )
 ;
 return
+[
 true
+!
+iniExists
+]
 ;
 }
 /
@@ -18355,75 +18399,7 @@ commandLine
 {
 var
 isDirty
-=
-false
-;
-var
 forceAutoReg
-=
-false
-;
-/
-/
-Somehow
-the
-component
-list
-went
-away
-and
-for
-that
-reason
-the
-new
-one
-/
-/
-generated
-by
-this
-function
-is
-going
-to
-result
-in
-a
-different
-compreg
-.
-/
-/
-We
-must
-force
-a
-restart
-.
-var
-componentList
-=
-getFile
-(
-KEY_PROFILEDIR
-[
-FILE_EXTENSION_MANIFEST
-]
-)
-;
-if
-(
-!
-componentList
-.
-exists
-(
-)
-)
-forceAutoReg
-=
-true
 ;
 /
 /
@@ -18480,17 +18456,16 @@ force
 a
 regeneration
 .
-if
-(
+[
+isDirty
+forceAutoReg
+]
+=
 this
 .
 _ensureDatasetIntegrity
 (
 )
-)
-isDirty
-=
-true
 ;
 /
 /
@@ -25162,20 +25137,16 @@ already
 .
 var
 isDirty
-=
-false
 ;
-if
-(
+[
+isDirty
+]
+=
 this
 .
 _ensureDatasetIntegrity
 (
 )
-)
-isDirty
-=
-true
 ;
 if
 (
