Bug 471451 - configure outputs garbage while figuring out arguments for midl if midl is missing, r=ted
UltraBlame original commit: 978be7d51a258470748ad18ce2f26d05870f2105

--- a/configure.in
+++ b/configure.in
@@ -5063,6 +5063,15 @@ flags
 )
 if
 test
+-
+n
+"
+_MIDL_MAJOR_VERSION
+"
+;
+then
+if
+test
 \
 (
 "
@@ -5210,6 +5219,22 @@ need
 no_robust
 ]
 )
+else
+MIDL_FLAGS
+=
+"
+{
+MIDL_FLAGS
+}
+"
+AC_MSG_RESULT
+(
+[
+none
+needed
+]
+)
+fi
 else
 MIDL_FLAGS
 =
