Bug 469880. Support a libnotify-based implementation of nsIAlertsService for GTK. r+sr=roc,r=ted
UltraBlame original commit: 9891b174d8712de2465464cbcfd96cf8c3952c60

--- a/toolkit/system/gnome/Makefile.in
+++ b/toolkit/system/gnome/Makefile.in
@@ -440,6 +440,16 @@ string
 \
 necko
 \
+alerts
+\
+gfx
+\
+imglib2
+\
+intl
+\
+widget
+\
 (
 NULL
 )
@@ -461,6 +471,24 @@ cpp
 (
 NULL
 )
+ifdef
+MOZ_ENABLE_LIBNOTIFY
+CPPSRCS
++
+=
+\
+nsAlertsService
+.
+cpp
+\
+nsAlertsIconListener
+.
+cpp
+\
+(
+NULL
+)
+endif
 EXTRA_DSO_LDOPTS
 +
 =
@@ -494,8 +522,27 @@ GLIB_LIBS
 )
 \
 (
+MOZ_LIBNOTIFY_LIBS
+)
+\
+(
 NULL
 )
+LOCAL_INCLUDES
++
+=
+-
+I
+(
+topsrcdir
+)
+/
+toolkit
+/
+components
+/
+build
+/
 include
 (
 topsrcdir
@@ -524,6 +571,10 @@ MOZ_LIBGNOME_CFLAGS
 \
 (
 GLIB_CFLAGS
+)
+\
+(
+MOZ_LIBNOTIFY_CFLAGS
 )
 \
 (
