--- a/config/autoconf.mk.in
+++ b/config/autoconf.mk.in
@@ -1789,6 +1789,15 @@ MOZ_XIE_LIBS
 XT_LIBS
 =
 XT_LIBS
+MOZ_LIBNOTIFY_CFLAGS
+=
+MOZ_LIBNOTIFY_CFLAGS
+MOZ_LIBNOTIFY_LIBS
+=
+MOZ_LIBNOTIFY_LIBS
+MOZ_ENABLE_LIBNOTIFY
+=
+MOZ_ENABLE_LIBNOTIFY
 GLIB_CFLAGS
 =
 GLIB_CFLAGS
