--- a/configure.in
+++ b/configure.in
@@ -1376,6 +1376,11 @@ SQLITE_VERSION
 6
 .
 2
+LIBNOTIFY_VERSION
+=
+0
+.
+4
 MSMANIFEST_TOOL
 =
 dnl
@@ -39725,6 +39730,204 @@ MOZ_DBUS_GLIB_CFLAGS
 AC_SUBST
 (
 MOZ_DBUS_GLIB_LIBS
+)
+dnl
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+dnl
+=
+libnotify
+support
+dnl
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+MOZ_ARG_ENABLE_BOOL
+(
+libnotify
+[
+-
+-
+enable
+-
+libnotify
+Enable
+libnotify
+support
+]
+MOZ_ENABLE_LIBNOTIFY
+=
+1
+MOZ_ENABLE_LIBNOTIFY
+=
+)
+if
+test
+"
+MOZ_ENABLE_GTK2
+"
+then
+if
+test
+"
+MOZ_ENABLE_LIBNOTIFY
+"
+then
+AC_DEFINE
+(
+MOZ_ENABLE_LIBNOTIFY
+)
+fi
+fi
+if
+test
+-
+z
+"
+SKIP_LIBRARY_CHECKS
+"
+then
+if
+test
+"
+MOZ_ENABLE_GTK2
+"
+then
+if
+test
+"
+MOZ_ENABLE_LIBNOTIFY
+"
+then
+PKG_CHECK_MODULES
+(
+MOZ_LIBNOTIFY
+libnotify
+>
+=
+LIBNOTIFY_VERSION
+)
+fi
+fi
+fi
+AC_SUBST
+(
+MOZ_ENABLE_LIBNOTIFY
+)
+AC_SUBST
+(
+MOZ_LIBNOTIFY_CFLAGS
+)
+AC_SUBST
+(
+MOZ_LIBNOTIFY_LIBS
 )
 dnl
 =
