bug 471188 - stop calling 'make install' for spidermonkey. r=bsmedberg,jimb
UltraBlame original commit: 3da64152f578df888ccd6187b457fcfcc92cd17a

--- a/js/src/Makefile.in
+++ b/js/src/Makefile.in
@@ -429,56 +429,6 @@ analysis
 -
 tests
 endif
-ifndef
-JS_MOZ_INSTALL
-#
-This
-is
-the
-appropriate
-behavior
-for
-GNU
--
-style
-'
-make
-install
-'
-.
-For
-#
-Mozilla
-in
--
-tree
-behavior
-leaving
-NSDISTMODE
-unset
-is
-the
-right
-#
-thing
-;
-config
-/
-js
-/
-Makefile
-.
-in
-sets
-JS_MOZ_INSTALL
-in
-that
-case
-.
-NSDISTMODE
-=
-copy
-endif
 MODULE
 =
 js
@@ -1040,6 +990,10 @@ jsautocfg
 .
 h
 \
+(
+CURDIR
+)
+/
 jsautokw
 .
 h
@@ -1402,6 +1356,11 @@ jscpucfg
 .
 h
 endif
+EXPORTS
+=
+(
+INSTALLED_HEADERS
+)
 JS_SAFE_ARENA
 =
 1
@@ -1718,6 +1677,118 @@ config
 rules
 .
 mk
+#
+nsinstall
+doesn
+'
+t
+get
+built
+until
+we
+enter
+config
+/
+in
+the
+exports
+phase
+#
+so
+we
+'
+ll
+have
+to
+manually
+ensure
+it
+gets
+built
+here
+if
+we
+want
+to
+use
+#
+(
+EXPORTS
+)
+ifneq
+(
+(
+CROSS_COMPILE
+)
+(
+filter
+-
+out
+WINNT
+OS2
+(
+OS_ARCH
+)
+)
+)
+ifneq
+(
+(
+OS_ARCH
+)
+WINCE
+)
+(
+EXPORTS
+)
+(
+PUBLIC
+)
+:
+config
+/
+nsinstall
+(
+HOST_BIN_SUFFIX
+)
+config
+/
+nsinstall
+(
+HOST_BIN_SUFFIX
+)
+:
+(
+srcdir
+)
+/
+config
+/
+nsinstall
+.
+c
+(
+srcdir
+)
+/
+config
+/
+pathsub
+.
+c
+(
+MAKE
+)
+-
+C
+config
+/
+nsinstall
+(
+HOST_BIN_SUFFIX
+)
+endif
+endif
 ifdef
 MOZ_SYNC_BUILD_FILES
 #
@@ -3654,6 +3725,11 @@ SCRIPTS
 js
 -
 config
+SDK_BINARY
+=
+js
+-
+config
 install
 :
 :
@@ -3661,10 +3737,7 @@ install
 INSTALLED_HEADERS
 )
 (
-INSTALL
-)
-(
-IFLAGS1
+SYSINSTALL
 )
 ^
 (
@@ -3684,61 +3757,13 @@ SCRIPTS
 PROGRAM
 )
 (
-INSTALL
-)
-(
-IFLAGS2
+SYSINSTALL
 )
 ^
 (
 bindir
 )
-#
-The
-Mozilla
-top
--
-level
-makefiles
-use
 install
--
-runtime
--
-libs
-directly
-to
-#
-place
-an
-additional
-copy
-of
-the
-libraries
-in
-the
-'
-dist
-/
-bin
-'
-#
-directory
-.
-install
-:
-:
-install
--
-runtime
--
-libs
-install
--
-runtime
--
-libs
 :
 :
 (
@@ -3757,10 +3782,7 @@ LIBRARY
 )
 )
 (
-INSTALL
-)
-(
-IFLAGS1
+SYSINSTALL
 )
 (
 LIBRARY
@@ -3776,10 +3798,7 @@ SHARED_LIBRARY
 )
 )
 (
-INSTALL
-)
-(
-IFLAGS2
+SYSINSTALL
 )
 (
 SHARED_LIBRARY
@@ -3795,10 +3814,7 @@ IMPORT_LIBRARY
 )
 )
 (
-INSTALL
-)
-(
-IFLAGS2
+SYSINSTALL
 )
 (
 IMPORT_LIBRARY
