Bug 429827 - Download manager does not warn when its download location does not exist or is write protected r=Mardak
UltraBlame original commit: cab8b946ee8611918e7b65d5681b2a4ce4abd2b0

--- a/toolkit/mozapps/downloads/src/nsHelperAppDlg.js.in
+++ b/toolkit/mozapps/downloads/src/nsHelperAppDlg.js.in
@@ -487,6 +487,245 @@ BLOCK
 *
 /
 /
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+Helper
+Functions
+/
+*
+*
+*
+Determines
+if
+a
+given
+directory
+is
+able
+to
+be
+used
+to
+download
+to
+.
+*
+*
+param
+aDirectory
+*
+The
+directory
+to
+check
+.
+*
+returns
+true
+if
+we
+can
+use
+the
+directory
+false
+otherwise
+.
+*
+/
+function
+isUsableDirectory
+(
+aDirectory
+)
+{
+return
+aDirectory
+.
+exists
+(
+)
+&
+&
+aDirectory
+.
+isDirectory
+(
+)
+&
+&
+aDirectory
+.
+isWritable
+(
+)
+;
+}
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+nsUnkownContentTypeDialog
+/
 *
 This
 file
@@ -1664,9 +1903,9 @@ to
 lastDir
 if
 it
-'
-s
+is
 valid
+otherwise
 use
 the
 user
@@ -1677,7 +1916,23 @@ default
 /
 downloads
 directory
-otherwise
+.
+userDownloadsDirectory
+should
+always
+return
+a
+/
+/
+valid
+directory
+so
+we
+can
+safely
+default
+to
+it
 .
 var
 dnldMgr
@@ -1708,6 +1963,27 @@ interfaces
 nsIDownloadManager
 )
 ;
+picker
+.
+displayDirectory
+=
+dnldMgr
+.
+userDownloadsDirectory
+;
+/
+/
+The
+last
+directory
+preference
+may
+not
+exist
+which
+will
+throw
+.
 try
 {
 var
@@ -1733,10 +2009,9 @@ nsILocalFile
 ;
 if
 (
-lastDir
-.
-exists
+isUsableDirectory
 (
+lastDir
 )
 )
 picker
@@ -1744,15 +2019,6 @@ picker
 displayDirectory
 =
 lastDir
-;
-else
-picker
-.
-displayDirectory
-=
-dnldMgr
-.
-userDownloadsDirectory
 ;
 }
 catch
@@ -1760,14 +2026,6 @@ catch
 ex
 )
 {
-picker
-.
-displayDirectory
-=
-dnldMgr
-.
-userDownloadsDirectory
-;
 }
 if
 (
@@ -2159,14 +2417,14 @@ aFileExt
 if
 (
 !
-aLocalFile
-|
-|
-!
-aLocalFile
-.
-exists
 (
+aLocalFile
+&
+&
+isUsableDirectory
+(
+aLocalFile
+)
 )
 )
 return
