Bug 469509 - runtests.py.in : don't print leak lines for classes that aren't leaked.  r=ted
UltraBlame original commit: 1a4e256b6894377cba435aa1296e694bb2d13493

--- a/testing/mochitest/runtests.py.in
+++ b/testing/mochitest/runtests.py.in
@@ -2886,49 +2886,6 @@ detected
 )
 else
 :
-leaks
-=
-open
-(
-LEAK_REPORT_FILE
-"
-r
-"
-)
-for
-line
-in
-leaks
-:
-log
-.
-info
-(
-line
-.
-rstrip
-(
-)
-)
-leaks
-.
-close
-(
-)
-threshold
-=
-options
-.
-leakThreshold
-leaks
-=
-open
-(
-LEAK_REPORT_FILE
-"
-r
-"
-)
 #
 Per
 -
@@ -3044,6 +3001,92 @@ numLeaked
 d
 +
 )
+"
+)
+leaks
+=
+open
+(
+LEAK_REPORT_FILE
+"
+r
+"
+)
+for
+line
+in
+leaks
+:
+matches
+=
+lineRe
+.
+match
+(
+line
+)
+if
+(
+matches
+and
+int
+(
+matches
+.
+group
+(
+"
+numLeaked
+"
+)
+)
+=
+=
+0
+and
+matches
+.
+group
+(
+"
+name
+"
+)
+!
+=
+"
+TOTAL
+"
+)
+:
+continue
+log
+.
+info
+(
+line
+.
+rstrip
+(
+)
+)
+leaks
+.
+close
+(
+)
+threshold
+=
+options
+.
+leakThreshold
+leaks
+=
+open
+(
+LEAK_REPORT_FILE
+"
+r
 "
 )
 seenTotal
