Bug 324758 - Updater should use brand name string and not hardcode Firefox. r=ted.mielczarek
UltraBlame original commit: 6128896b6f98a3dd04ba0a4a82d3f0d98464fc27

--- a/browser/locales/Makefile.in
+++ b/browser/locales/Makefile.in
@@ -3202,6 +3202,23 @@ e
 s
 /
 %
+MOZ_APP_DISPLAYNAME
+%
+/
+(
+MOZ_APP_DISPLAYNAME
+)
+/
+"
+|
+\
+sed
+-
+e
+"
+s
+/
+%
 AB_CD
 %
 /
@@ -3228,6 +3245,23 @@ srcdir
 updater_append
 .
 ini
+|
+\
+sed
+-
+e
+"
+s
+/
+%
+MOZ_APP_DISPLAYNAME
+%
+/
+(
+MOZ_APP_DISPLAYNAME
+)
+/
+"
 |
 \
 sed
