--- a/configure.in
+++ b/configure.in
@@ -1373,7 +1373,9 @@ SQLITE_VERSION
 .
 6
 .
-7
+6
+.
+2
 LIBNOTIFY_VERSION
 =
 0
@@ -47917,6 +47919,95 @@ MOZ_UPDATER
 =
 1
 )
+#
+The
+Windows
+build
+requires
+the
+iconv
+command
+line
+utility
+#
+in
+order
+to
+build
+the
+updater
+.
+case
+"
+target_os
+"
+in
+msvc
+*
+|
+mks
+*
+|
+cygwin
+*
+|
+mingw
+*
+|
+wince
+*
+)
+if
+test
+-
+n
+"
+MOZ_UPDATER
+"
+;
+then
+AC_MSG_CHECKING
+(
+[
+for
+iconv
+]
+)
+AC_CHECK_PROGS
+(
+HOST_ICONV
+HOST_ICONV
+"
+iconv
+"
+"
+"
+)
+if
+test
+-
+z
+"
+HOST_ICONV
+"
+;
+then
+AC_MSG_ERROR
+(
+[
+iconv
+not
+found
+in
+\
+PATH
+]
+)
+fi
+fi
+;
+;
+esac
 AC_SUBST
 (
 MOZ_UPDATER
