bug 472877 - Add configure option to enable gczeal. r=crowder
UltraBlame original commit: 9d68078d593b99545247194aed7d59adc55f969f

--- a/configure.in
+++ b/configure.in
@@ -55806,6 +55806,158 @@ dnl
 =
 =
 dnl
+Zealous
+JavaScript
+GC
+dnl
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+MOZ_ARG_ENABLE_BOOL
+(
+gczeal
+[
+-
+-
+enable
+-
+gczeal
+Enable
+zealous
+JavaScript
+GCing
+]
+JS_GC_ZEAL
+=
+1
+JS_GC_ZEAL
+=
+)
+if
+test
+-
+n
+"
+JS_GC_ZEAL
+"
+;
+then
+AC_DEFINE
+(
+JS_GC_ZEAL
+)
+fi
+dnl
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+dnl
 =
 Enable
 static
