--- a/js/src/configure.in
+++ b/js/src/configure.in
@@ -34446,6 +34446,156 @@ dnl
 =
 =
 dnl
+Zealous
+GC
+dnl
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+MOZ_ARG_ENABLE_BOOL
+(
+gczeal
+[
+-
+-
+enable
+-
+gczeal
+Enable
+zealous
+GCing
+]
+JS_GC_ZEAL
+=
+1
+JS_GC_ZEAL
+=
+)
+if
+test
+-
+n
+"
+JS_GC_ZEAL
+"
+;
+then
+AC_DEFINE
+(
+JS_GC_ZEAL
+)
+fi
+dnl
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+dnl
 =
 Enable
 static
