Bug 305039 - (Win32 only) Make Windows installer more 'Unicode-aware'. r=rstrong
UltraBlame original commit: efc8e32bfe59015539b551762db6f32a44ae7af2

--- a/browser/installer/windows/Makefile.in
+++ b/browser/installer/windows/Makefile.in
@@ -208,6 +208,17 @@ mozilla
 org
 >
 #
+Ehsan
+Akhgari
+<
+ehsan
+.
+akhgari
+gmail
+.
+com
+>
+#
 #
 Alternatively
 the
@@ -473,12 +484,34 @@ static
 (
 NULL
 )
-INSTALLER_FILES
+#
+All
+script
+and
+locale
+files
+used
+by
+the
+Unicode
+version
+of
+NSIS
+need
+to
+be
+#
+converted
+from
+UTF
+-
+8
+to
+UTF
+-
+16LE
+INSTALLER_FILES_CONV
 =
-\
-app
-.
-tag
 \
 nsis
 /
@@ -501,12 +534,54 @@ nsh
 (
 NULL
 )
-BRANDING_FILES
+INSTALLER_FILES
+=
+\
+app
+.
+tag
+\
+(
+NULL
+)
+#
+All
+script
+and
+locale
+files
+used
+by
+the
+Unicode
+version
+of
+NSIS
+need
+to
+be
+#
+converted
+from
+UTF
+-
+8
+to
+UTF
+-
+16LE
+BRANDING_FILES_CONV
 =
 \
 branding
 .
 nsi
+\
+(
+NULL
+)
+BRANDING_FILES
+=
 \
 wizHeader
 .
@@ -593,22 +668,6 @@ config
 config
 .
 mk
-include
-(
-call
-EXPAND_LOCALE_SRCDIR
-toolkit
-/
-locales
-)
-/
-installer
-/
-windows
-/
-charset
-.
-mk
 installer
 :
 :
@@ -669,6 +728,67 @@ mkdir
 (
 CONFIG_DIR
 )
+for
+i
+in
+(
+INSTALLER_FILES_CONV
+)
+;
+do
+\
+iconv
+-
+f
+UTF
+-
+8
+-
+t
+UTF
+-
+16LE
+(
+srcdir
+)
+/
+i
+|
+\
+cat
+(
+MOZILLA_DIR
+)
+/
+toolkit
+/
+mozapps
+/
+installer
+/
+windows
+/
+nsis
+/
+utf16
+-
+le
+-
+bom
+.
+bin
+-
+>
+\
+(
+CONFIG_DIR
+)
+/
+basename
+i
+;
+\
+done
 (
 INSTALL
 )
@@ -685,6 +805,68 @@ INSTALLER_FILES
 (
 CONFIG_DIR
 )
+for
+i
+in
+(
+BRANDING_FILES_CONV
+)
+;
+do
+\
+iconv
+-
+f
+UTF
+-
+8
+-
+t
+UTF
+-
+16LE
+(
+DIST
+)
+/
+branding
+/
+i
+|
+\
+cat
+(
+MOZILLA_DIR
+)
+/
+toolkit
+/
+mozapps
+/
+installer
+/
+windows
+/
+nsis
+/
+utf16
+-
+le
+-
+bom
+.
+bin
+-
+>
+\
+(
+CONFIG_DIR
+)
+/
+i
+;
+\
+done
 (
 INSTALL
 )
@@ -780,7 +962,45 @@ defines
 nsi
 .
 in
+|
+iconv
+-
+f
+UTF
+-
+8
+-
+t
+UTF
+-
+16LE
+|
+\
+cat
+(
+MOZILLA_DIR
+)
+/
+toolkit
+/
+mozapps
+/
+installer
+/
+windows
+/
+nsis
+/
+utf16
+-
+le
+-
+bom
+.
+bin
+-
 >
+\
 (
 CONFIG_DIR
 )
@@ -828,9 +1048,6 @@ AB_CD
 )
 \
 (
-WIN_INSTALLER_CHARSET
-)
-(
 CONFIG_DIR
 )
 (
@@ -856,6 +1073,67 @@ mkdir
 (
 CONFIG_DIR
 )
+for
+i
+in
+(
+INSTALLER_FILES_CONV
+)
+;
+do
+\
+iconv
+-
+f
+UTF
+-
+8
+-
+t
+UTF
+-
+16LE
+(
+srcdir
+)
+/
+i
+|
+\
+cat
+(
+MOZILLA_DIR
+)
+/
+toolkit
+/
+mozapps
+/
+installer
+/
+windows
+/
+nsis
+/
+utf16
+-
+le
+-
+bom
+.
+bin
+-
+>
+\
+(
+CONFIG_DIR
+)
+/
+basename
+i
+;
+\
+done
 (
 INSTALL
 )
@@ -872,6 +1150,68 @@ INSTALLER_FILES
 (
 CONFIG_DIR
 )
+for
+i
+in
+(
+BRANDING_FILES_CONV
+)
+;
+do
+\
+iconv
+-
+f
+UTF
+-
+8
+-
+t
+UTF
+-
+16LE
+(
+DIST
+)
+/
+branding
+/
+i
+|
+\
+cat
+(
+MOZILLA_DIR
+)
+/
+toolkit
+/
+mozapps
+/
+installer
+/
+windows
+/
+nsis
+/
+utf16
+-
+le
+-
+bom
+.
+bin
+-
+>
+\
+(
+CONFIG_DIR
+)
+/
+i
+;
+\
+done
 (
 INSTALL
 )
@@ -1006,7 +1346,45 @@ defines
 nsi
 .
 in
+|
+iconv
+-
+f
+UTF
+-
+8
+-
+t
+UTF
+-
+16LE
+|
+\
+cat
+(
+MOZILLA_DIR
+)
+/
+toolkit
+/
+mozapps
+/
+installer
+/
+windows
+/
+nsis
+/
+utf16
+-
+le
+-
+bom
+.
+bin
+-
 >
+\
 (
 CONFIG_DIR
 )
@@ -1053,9 +1431,6 @@ installer
 AB_CD
 )
 \
-(
-WIN_INSTALLER_CHARSET
-)
 (
 CONFIG_DIR
 )
