--- a/config/autoconf.mk.in
+++ b/config/autoconf.mk.in
@@ -1542,15 +1542,24 @@ PNG_REQUIRES
 =
 png
 endif
+MOZ_NATIVE_LCMS
+=
+MOZ_NATIVE_LCMS
 LCMS_CFLAGS
 =
 LCMS_CFLAGS
 LCMS_LIBS
 =
 LCMS_LIBS
+ifdef
+MOZ_NATIVE_LCMS
+LCMS_REQUIRES
+=
+else
 LCMS_REQUIRES
 =
 lcms
+endif
 MOZ_NATIVE_SQLITE
 =
 MOZ_NATIVE_SQLITE
