--- a/configure.in
+++ b/configure.in
@@ -66046,6 +66046,44 @@ dnl
 =
 =
 =
+MOZ_NATIVE_LCMS
+=
+MOZ_ARG_ENABLE_BOOL
+(
+system
+-
+lcms
+[
+-
+-
+enable
+-
+system
+-
+lcms
+Use
+system
+lcms
+(
+located
+with
+pkgconfig
+)
+]
+MOZ_NATIVE_LCMS
+=
+1
+MOZ_NATIVE_LCMS
+=
+)
+if
+test
+-
+z
+"
+MOZ_NATIVE_LCMS
+"
+then
 LCMS_CFLAGS
 =
 if
@@ -66104,6 +66142,20 @@ bin
 lmozlcms
 '
 fi
+else
+PKG_CHECK_MODULES
+(
+LCMS
+lcms
+>
+=
+LCMS_VERSION
+)
+fi
+AC_SUBST
+(
+MOZ_NATIVE_LCMS
+)
 AC_SUBST
 (
 LCMS_CFLAGS
