--- a/js/src/config/autoconf.mk.in
+++ b/js/src/config/autoconf.mk.in
@@ -1362,6 +1362,12 @@ VISIBILITY_FLAGS
 WRAP_SYSTEM_INCLUDES
 =
 WRAP_SYSTEM_INCLUDES
+ENABLE_JIT
+=
+ENABLE_JIT
+NANOJIT_ARCH
+=
+NANOJIT_ARCH
 HAVE_ARM_SIMD
 =
 HAVE_ARM_SIMD
