Bug 464795 - Persist "save as" directory during private browsing, but restore previous value after; r=gavin
UltraBlame original commit: c8faab9608dc165311446e8cf127ff9feab37fd7

--- a/toolkit/mozapps/downloads/src/nsHelperAppDlg.js.in
+++ b/toolkit/mozapps/downloads/src/nsHelperAppDlg.js.in
@@ -808,6 +808,27 @@ interfaces
 .
 nsITimer
 ;
+Components
+.
+utils
+.
+import
+(
+"
+resource
+:
+/
+/
+gre
+/
+modules
+/
+DownloadLastDir
+.
+jsm
+"
+)
+;
 /
 *
 ctor
@@ -1896,6 +1917,53 @@ nsIFilePicker
 filterAll
 )
 ;
+var
+inPrivateBrowsing
+=
+false
+;
+try
+{
+var
+pbs
+=
+Components
+.
+classes
+[
+"
+mozilla
+.
+org
+/
+privatebrowsing
+;
+1
+"
+]
+.
+getService
+(
+Components
+.
+interfaces
+.
+nsIPrivateBrowsingService
+)
+;
+inPrivateBrowsing
+=
+pbs
+.
+privateBrowsingEnabled
+;
+}
+catch
+(
+e
+)
+{
+}
 /
 /
 Default
@@ -2006,6 +2074,21 @@ interfaces
 .
 nsILocalFile
 )
+;
+if
+(
+inPrivateBrowsing
+&
+&
+gDownloadLastDir
+.
+path
+)
+lastDir
+=
+gDownloadLastDir
+.
+path
 ;
 if
 (
@@ -2181,76 +2264,44 @@ newDir
 result
 .
 parent
-;
-/
-/
-Do
-not
-remember
-the
-last
-save
-directory
-inside
-the
-private
-browsing
-mode
-var
-persistLastDir
-=
-true
-;
-try
-{
-var
-pbs
-=
-Components
 .
-classes
-[
-"
-mozilla
-.
-org
-/
-privatebrowsing
-;
-1
-"
-]
-.
-getService
+QueryInterface
 (
 Components
 .
 interfaces
 .
-nsIPrivateBrowsingService
+nsILocalFile
 )
 ;
+/
+/
+Do
+not
+store
+the
+last
+save
+directory
+as
+a
+pref
+inside
+the
+private
+browsing
+mode
 if
 (
-pbs
+inPrivateBrowsing
+)
+gDownloadLastDir
 .
-privateBrowsingEnabled
-)
-persistLastDir
+path
 =
-false
+newDir
 ;
-}
-catch
-(
-e
-)
-{
-}
-if
-(
-persistLastDir
-)
+else
 prefs
 .
 setComplexValue
