Bug 464848: XMLHttpRequest doesn't send the right content-type for non-document request bodies. r/sr=bz
UltraBlame original commit: 602e6c8d494aff5cc17b845c62abcced9aa80623

--- a/content/base/test/Makefile.in
+++ b/content/base/test/Makefile.in
@@ -1380,6 +1380,25 @@ test_bug473162
 .
 html
 \
+test_XHRSendData
+.
+html
+\
+file_XHRSendData
+.
+sjs
+\
+file_XHRSendData_doc
+.
+xml
+\
+file_XHRSendData_doc
+.
+xml
+^
+headers
+^
+\
 (
 NULL
 )
