--- a/security/manager/ssl/tests/mochitest/Makefile.in
+++ b/security/manager/ssl/tests/mochitest/Makefile.in
@@ -441,11 +441,17 @@ config
 rules
 .
 mk
-#
 _CHROME_FILES
 =
 \
-#
+test_bug466080
+.
+html
+\
+bug466080
+.
+sjs
+\
 (
 NULL
 )
@@ -459,14 +465,12 @@ Leaks
 the
 world
 .
-#
 libs
 :
 :
 (
 _CHROME_FILES
 )
-#
 (
 INSTALL
 )
