b=347174, implement document.readystate == 'complete'; r=sicking
UltraBlame original commit: 39dc85bc5d99330529754ba28d7258b6a5271e99

--- a/content/html/content/test/Makefile.in
+++ b/content/html/content/test/Makefile.in
@@ -790,6 +790,30 @@ test_bug460568
 .
 html
 \
+test_bug347174
+.
+html
+\
+test_bug347174_write
+.
+html
+\
+test_bug347174_xsl
+.
+html
+\
+test_bug347174_xslp
+.
+html
+\
+347174transformable
+.
+xml
+\
+347174transform
+.
+xsl
+\
 (
 NULL
 )
