bug 462004 - JavaScript shell should provide line editing facilities. r=bsmedberg
UltraBlame original commit: 19e319a0647b8b7ce10de15c0b642d6af75fedc9

--- a/js/src/Makefile.in
+++ b/js/src/Makefile.in
@@ -429,61 +429,38 @@ analysis
 -
 tests
 endif
+ifdef
+JS_NATIVE_EDITLINE
+DIRS
++
+=
+editline
+endif
+#
+editline
+needs
+to
+get
+built
+before
+the
+shell
+DIRS
++
+=
+shell
 MODULE
 =
 js
 LIBRARY_NAME
 =
 mozjs
+STATIC_LIBRARY_NAME
+=
+js_static
 GRE_MODULE
 =
 1
-PROGRAM
-=
-js
-(
-BIN_SUFFIX
-)
-#
-The
-shell
-uses
-some
-'
-HIDDEN
-'
-symbols
-to
-produce
-statistics
-so
-we
-#
-link
-directly
-against
-the
-.
-o
-files
-not
-against
-the
-JS
-shared
-#
-library
-.
-PROGOBJS
-=
-js
-.
-(
-OBJ_SUFFIX
-)
-(
-OBJS
-)
 LIBS
 =
 (
@@ -698,12 +675,40 @@ no
 longer
 work
 .
-ifndef
-JS_STATIC_BUILD
+#
+#
+In
+fact
+we
+now
+build
+both
+a
+static
+and
+a
+shared
+library
+as
+the
+#
+JS
+shell
+would
+like
+to
+link
+to
+the
+static
+library
+.
 FORCE_SHARED_LIB
 =
 1
-endif
+FORCE_STATIC_LIB
+=
+1
 VPATH
 =
 (
@@ -1204,14 +1209,9 @@ TraceTreeDrawer
 .
 cpp
 endif
-DEFINES
-+
-=
--
-DFEATURE_NANOJIT
--
-DJS_TRACER
 endif
+#
+ENABLE_JIT
 ifdef
 HAVE_DTRACE
 INSTALLED_HEADERS
