--- a/js/src/shell/Makefile.in
+++ b/js/src/shell/Makefile.in
@@ -484,6 +484,45 @@ config
 rules
 .
 mk
+ifdef
+MOZ_SHARK
+CFLAGS
++
+=
+-
+F
+/
+System
+/
+Library
+/
+PrivateFrameworks
+CXXFLAGS
++
+=
+-
+F
+/
+System
+/
+Library
+/
+PrivateFrameworks
+LDFLAGS
++
+=
+-
+F
+/
+System
+/
+Library
+/
+PrivateFrameworks
+-
+framework
+CHUD
+endif
 #
 People
 expect
